Fix 'Loading...' overflow

--- a/src/style.css
+++ b/src/style.css
@@ -38,6 +38,7 @@ div .error {
     background: rgba(255,255,255,0.8);
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
     border-radius: 5px;
+    color: #777;
 }
 .info h4 {
     margin: 0 0 5px;
